--- a/InspirationalReminders/notificationExtension/Info.plist
+++ b/InspirationalReminders/notificationExtension/Info.plist
@@ -29,7 +29,7 @@
 			<key>UNNotificationExtensionCategory</key>
 			<string>quote</string>
 			<key>UNNotificationExtensionInitialContentSizeRatio</key>
-			<real>1</real>
+			<integer>1</integer>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
